docs(phase20): record Stage 2 environment ceiling